<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/left_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/left_arrow"
        android:title="@string/menuL"

        app:showAsAction="always" />

    <item
        android:id="@+id/center_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/center"
        android:title="@string/menuC"

        app:showAsAction="always" />

    <item
        android:id="@+id/right_frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/right_arrow"
        android:title="@string/menuR"

        app:showAsAction="always" />
</menu>